testsuite/tests/parser/should_fail/pfail021.alan
hello() : proc
  foo : int;
{
  hello()
  foo = 3;
}
