testsuite/tests/parser/should_fail/pfail021.stderr
pfail021.alan:5:3: Error: Parse error on input `foo'
	Probably missing `;'

